# spyview

./: README.md  conf_mac_home  homedir_config
Mac_installation/spyview.app/: spyview  spyview.icns
Mac_installation/under_construction/: spyview
bin_n_dependenc/mac_bin_backup/: spypal  spyview  stminfo  test_imagedata  toeno2mtx
cmaps/: makematlab.m  matlabwinter.spp  ocean.spp
cmaps/nanoscope/: nanoscope_01.ppm  nanoscope_11.ppm  nanoscope_12.ppm  nanoscope_13.ppm  nanoscope_17.ppm  nanoscope_19.ppm
cmaps/unused/: AUTUMNAL.ppm  GRENSCAL.ppm  GREYSCAL.ppm  INVERT.ppm  LITEPURP.ppm  MOUNTAIN.ppm  NEON.ppm  RAINBOW3.ppm  RAINBOW4.ppm  RAINBOW6.ppm  RAINBOW7.ppm
cmaps/wsxm/: AllColors.lut  China.lut  Cool.lut  Dos.lut  RainRamp.lut  Spectrum.lut  Spring.lut  Winter.lut  lut2ppm.c  plot_map.sh
debian/: Makefile.am  control  dirs  files  pm3d2dat.1  spybrowse.1
simple_install_to_mac/: README  libX11.6.dylib  libfltk.1.3.dylib  libfltk_gl.1.3.dylib  libfltk_images.1.3.dylib  link.sh  spyview
simple_install_to_mac/dylibs/: libSystem.B.dylib  libXext.6.dylib  link_em_all.sh
source/: Makefile  Makefile.am  Makefile.in  conf_mac_home  conf_windows  conf_windows_debug  config.h  config.h.in  config.status  configure  configure.ac  homedir_config  uport.sh
source/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
source/cmaps/: aaronmap.m  colored_vee.spp  make8bands.m  makemap.m  matlabautumn.spp  matlabcool.spp  matlabcopper.spp  matlabpink_linear.m  matlabspring.spp  matlabsummer.spp
source/cmaps/nanoscope/: nanoscope_00.ppm  nanoscope_02.ppm  nanoscope_03.ppm  nanoscope_04.ppm  nanoscope_05.ppm  nanoscope_06.ppm  nanoscope_07.ppm  nanoscope_08.ppm  nanoscope_09.ppm  nanoscope_10.ppm  nanoscope_14.ppm  nanoscope_15.ppm  nanoscope_16.ppm  nanoscope_18.ppm  nanoscope_20.ppm  nanoscope_21.ppm
source/cmaps/unused/: AUTUMN.ppm  BICOL14.ppm  BICOL17.ppm  BICOLOR.ppm  BLUE2.ppm  CNTOUR04.ppm  CNTOUR06.ppm  CNTOUR12.ppm  CNTOUR16.ppm  FLAME.ppm  FLAME2.ppm  FLAME3.ppm  FLAME4.ppm  GOLD.ppm  GOLDORNG.ppm  GOLD_BRO.ppm  GREEN1.ppm  GREEN2.ppm  GREYLOW.ppm  GREYSCL.ppm  GREYTOP.ppm  GRYRED14.ppm  GRYSCAL.ppm  HOTCOAL.ppm  HOTCOAL2.ppm  ICEBERG.ppm  LIMEGREN.ppm  LITEBLUE.ppm  MTLAKES.ppm  MTLAKES2.ppm  MTLAKES3.ppm  PINKSCAL.ppm  RAINBOW1.ppm  RAINBOW2.ppm  RAINBOW5.ppm  RED.ppm  RUST.ppm  SAILING.ppm  SUNSET.ppm  TITANIUM.ppm  (+1 more)
source/cmaps/wsxm/: Autum.lut  BlackBody.lut  Blue.lut  BlueYellow.lut  Bone.lut  Brodmann.lut  Cardiac.lut  Cooling.lut  Copper.lut  Earth&Green.lut  Earth.lut  ExtraRain.lut  Flag.lut  Flame.lut  Flow.lut  FracMon.lut  German.lut  Gold.lut  Gray.lut  Green.lut  Hot.lut  HotIron.lut  Hsv.lut  InvGray.lut  Julio.lut  LandScape.lut  Makefile  Nanox.lut  Nih.lut  NihFire.lut  NihIce.lut  Pink.lut  PseudoColor.lut  Purple.lut  Red.lut  Storm.lut  Summer.lut  ThermicCool.lut  ThermicHot.lut  VeryHot.lut  (+1 more)
source/debian/: Makefile  Makefile.in  README.Debian  changelog  copyright  dat2pgm.1  docs  rules  splitfield.1  spyview.1  spyview.substvars  spyview3d.1
source/debian/spyview/DEBIAN/: control  md5sums
source/debian/spyview/usr/share/doc/spyview/test_images/: e_10_10.pgm  e_30_10.pgm  nt4_22.txt
source/debian/spyview/usr/share/spyview/: default_image.pgm  help.txt
source/debian/spyview/usr/share/spyview/cmaps/: afm-hot.spp  hot.spp  matlabbone.spp  neon.spp
source/debian/spyview/usr/share/spyview/html/: spypal_help_chooser.html  spypal_help_waypoint.html
source/spyview/: FLTK_Serialization.C  FLTK_Serialization.H  Fiddle.C  Fl_Listbox.H  Fl_Table.H  Gnuplot_Interface.C  Gnuplot_Interface.H  ImageData.C  ImageData.H  ImagePrinter.H  ImagePrinter_Control.C  ImagePrinter_Control.fl  ImagePrinter_Control.h  ImageWindow.C  ImageWindow.H  ImageWindow3d.C  ImageWindow3d.H  ImageWindow_Fitting.C  ImageWindow_Fitting_Ui.C  ImageWindow_Fitting_Ui.fl  ImageWindow_LineDraw.C  ImageWindow_Module.C  ImageWindow_Module.H  LineDraw_Control.C  LineDraw_Control.fl  LineDraw_Control.h  Makefile  Makefile.am  Makefile.in  PeakFinder.C  PeakFinder_Control.C  PeakFinder_Control.h  ThresholdDisplay.C  ThresholdDisplay_Control.C  ThresholdDisplay_Control.fl  ThresholdDisplay_Control.h  bisector.H  cclass.C  cclass.H  cclass_chooser.h  (+86 more)
source/spyview/.deps/: FLTK_Serialization.Po  Fiddle.Po  Fl_Listbox.Po  Fl_Table.Po  Gnuplot_Interface.Po  ImageData.Po  ImagePrinter.Po  ImagePrinter_Control.Po  ImageWindow.Po  ImageWindow_Fitting.Po  ImageWindow_Fitting_Ui.Po  ImageWindow_LineDraw.Po  ImageWindow_Module.Po  LineDraw_Control.Po  PeakFinder.Po  PeakFinder_Control.Po  ThresholdDisplay.Po  ThresholdDisplay_Control.Po  cclass.Po  dat2mtx.Po  dat2pgm.Po  eng.Po  gilles2mtx.Po  gp_to_mat.Po  grid_data.Po  huettel2mtx.Po  message.Po  misc.Po  mtxdiff.Po  mtxextract.Po  ns2pgm.Po  spybrowse.Po  spybrowse_ui.Po  spypal-FLTK_Serialization.Po  spypal-Fl_Table.Po  spypal-cclass.Po  spypal-message.Po  spypal-spypal.Po  spypal-spypal_gradient.Po  spypal-spypal_import.Po  (+12 more)
source/spyview/test_data/2015_12_18_______15.8.6_____SingleTone__quick_scan/: 20151218150808_data.meta.txt.orig  20151218150808_data.ps  20151218150808_data.set  20151218150808_dataprint.set  20151218150808_dataprint.svs  script.py  settings.json  setup.json  timing.json
source/test_images/: e_10_20.pgm  e_20_20.pgm  e_30_20.pgm  point.pgm  scan094.0.Stm  si.1.Stm
spyview/: Fiddle.H  Fl_Listbox.C  Fl_Table.C  Gnuplot_Interface.C  ImageData.C  ImagePrinter.C  ImageWindow.C  ImageWindow_Fitting.C  ImageWindow_Fitting.H  ImageWindow_Fitting_Ui.h  ImageWindow_LineDraw.H  Makefile.am  PeakFinder.H  PeakFinder_Control.fl  ThresholdDisplay.H  bisector.H  cclass.H  cclass_chooser.C  check_dll_dependencies_command.txt  copy_def_settings_spyview_pref.bat  dat2mtx.C  eng.C  gilles2mtx.C  gl2ps.h  grid_data.C  misc.C  ns2pgm.c  pm3d2dat  pnm_comments  spybrowse_ui.C  spynavigate_ui.h  spypal.C  spypal.h  spypal_gradient.C  spypal_import.C  spypal_interface.C  spyrot_comment  spyrotate.h  spyrotate_ui.h  spyview.C  (+7 more)
test_images/: SCAN0.TFR  longramp.pgm  nt4_22.mtx
(+22 files in other folders)
